--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     padding: 0;
 }
 
-.resume {
+.portfolio {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
@@ -64,6 +64,37 @@ h2 {
     border-radius: 5px;
 }
 
+/* Resume layout */
+.resume-header {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.resume-contact {
+    margin-bottom: 20px;
+}
+
+.resume-section {
+    margin-bottom: 20px;
+}
+
+.resume-section h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.resume-content {
+    margin-bottom: 10px;
+}
+
+.resume-content ul {
+    margin-top: 0;
+    padding-left: 20px;
+}
+
+
 /* Education Background */
 .education-grid {
             /*display: grid;
@@ -84,6 +115,7 @@ h2 {
 
 }
 
+/* Projects */
 
 
 /* Sources */
