--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,19 @@
 /* CSS Template */
 
+/*
+-Deveplment was aid with following souces-
+
+Souces:
+
+CS490WD Canvas Lectures and Resources
+
+"w3schools.com." W3Schools, Refsnes Data, 2024,https://www.w3schools.com. Accessed 26 June 2024.
+
+"stackoverflow.com." Stack Overflow, Stack Exchange Inc., 2024,https://stackoverflow.com. Accessed 20 June 2024.
+*/
+
+
+/*General*/
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
